objects/SDO_Einstein_GPT_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active_Mobile_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Mobile Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Action_1_Label__c</fullName>
        <label>Suggested Action 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Action_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Action 1</label>
        <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
        <relationshipLabel>Einstein Gen AI Configurations</relationshipLabel>
        <relationshipName>Einstein_Gen_AI_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suggested_Action_2_Label__c</fullName>
        <label>Suggested Action 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Action_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Suggested Action 2</label>
        <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
        <relationshipLabel>Einstein Gen AI Configurations (Suggested Action 2)</relationshipLabel>
        <relationshipName>Einstein_Gen_AI_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unknown_Answer_Fallback__c</fullName>
        <label>Unknown Answer Fallback</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Issue__c</fullName>
        <label>Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Resolution__c</fullName>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <label>Einstein Gen AI Configuration</label>
    <nameField>
        <label>Einstein Gen AI Demo Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Einstein Gen AI Configurations</pluralLabel>
    <recordTypes>
        <fullName>SDO_Einstein_Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>